# pywinauto

./: .gitignore  .gitmodules  .landscape.yml  .pre-commit-config.yaml  .prototools  MANIFEST.in  README.md  appveyor.yml  codecov.yml  cspell.config.yaml  make.bat  makedocs.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  taskfile.yaml
.config/pycharm/: python_unittests_testall.py.run.xml  venv_create.run.xml
.github/: cspell-pywinauto.txt  dependabot.yml
.github/obsolete/: .travis.yml
.github/scripts/: install.ps1  install_deps.sh  install_test_apps.sh  run_tests.ps1  run_tests.sh  start_display.sh
.github/workflows/: atspi_test.yml  codeql.yml
.to-delete/: .travis.yml
ci/: install.ps1  runTestsuite.ps1
docs/: HISTORY.txt  TODO.txt  readme.txt
examples/: forte_agent_sample.py  hook_and_listen.py  install_7zip.py  notepad_item.py  notepad_slow.py  print_administrators.py  save_from_firefox.py  save_from_internet_explorer.py  test_drag_n_drop.py  test_sakura.py  test_sakura2.py  wireshark.py
pywinauto/: application.py  findwindows.py  taskbar.py
pywinauto/controls/: __init__.py
sandbox/: recorder.py
src/pywinauto/: __init__.py  actionlogger.py  base_application.py  base_wrapper.py  controlproperties.py  findbestmatch.py  timings.py  xml_helpers.py
src/pywinauto/controls/: common_controls.py  hwndwrapper.py
src/pywinauto/linux/: application.py
src/pywinauto/tests/: comparetoreffont.py  missalignment.py  repeatedhotkey.py  truncation.py
src/pywinauto/unittests/: test_clipboard.py  test_common_controls.py  test_findbestmatch.py  test_findwindows.py  test_mouse.py  test_win32controls.py  test_win32hooks.py
