#
# `pywinauto` : GUI Application automation and testing library
#
# Copyright (C) 2006-2018 Mark Mc Mahon and Contributors
# https://github.com/pywinauto/pywinauto/graphs/contributors
# https://pywinauto.readthedocs.io/en/latest/credits.html
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# * Redistributions of source code must retain the above copyright notice, this
#   list of conditions and the following disclaimer.
#
# * Redistributions in binary form must reproduce the above copyright notice,
#   this list of conditions and the following disclaimer in the documentation
#   and/or other materials provided with the distribution.
#
# * Neither the name of pywinauto nor the names of its
#   contributors may be used to endorse or promote products derived from
#   this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

[project]
name = "pywinauto"
version = "0.7.0b1"
description = "A set of Python modules to automate the Microsoft Windows GUI"
authors = [
    { name = "Mark Mc Mahon and Contributors", email = "pywinauto-users@lists.sourceforge.net" },
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" },
]
keywords = [
    "windows",
    "gui",
    "automation",
    "GuiAuto",
    "testing",
    "test",
    "desktop",
    "mouse",
    "keyboard",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: User Interfaces",
]
license = { text = "BSD 3-clause" }
dependencies = [
    "Babel",
    "PyQt5; python_version > '3.6'",
    # Windows
    "comtypes>=1.4.0; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    # General
    "pillow",
    "python-xlib; sys_platform != 'win32'",
    # Compatibility
    "six",
    # Build
    "setuptools>=65.0.0",
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

[project.urls]
Homepage = "https://joelvaneenwyk.github.io/pywinauto"
Source = "https://github.com/joelvaneenwyk/pywinauto"

[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "pytest>=8.1.2",
    "pynose>=1.5.1",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "mock>=5.1.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "coverage>=7.5.3",
    "codecov>=2.1.13",
    "codacy-coverage>=1.3.11",
    "cmake>=3.29.3",
    "scikit-build>=0.17.6",
    "black>=24.4.2",
    "rst2pdf>=0.101",
    "sphinx>=7.3.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pywinauto"]

[tool.hatch.build.targets.sdist]
exclude = [
    "*.vsidx",
    "*.VC.opendb",
    "/.github",
    "/docs",
    "/previousReleases",
    "/dist",
    "/apps",
]

[tool.coverage.run]
source = ["pywinauto/"]
omit = [
    "*/.venv/*",
    "*/.vscode/*",
    "*/build/*",
    "*/previousReleases/*",
    "*/.git/*",
    # omit anything in a .local directory anywhere
    "*/.local/*",
    # omit everything in /usr
    "/usr/*",
    # omit this single file
    "utils/tirefire.py",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Disable fix for unused imports (`F401`).
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.flake8]
ignore = [
    # list comprehension redefines ...
    "F812",
    # block comment should start with '# '...
    "E265",
]
max-line-length = 120
